--- a/DogPound/app/src/main/res/layout/activity_main.xml
+++ b/DogPound/app/src/main/res/layout/activity_main.xml
@@ -2,10 +2,8 @@
 <!-- layout for main page: timer, score, holes, animals -->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/background">
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/instructions"
         android:layout_width="wrap_content"
@@ -198,5 +196,4 @@
         app:layout_constraintStart_toEndOf="@+id/instructions"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
